--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "BARCODE Game",
+    "name": "BarCodeGame",
     "version": "0.0.1",
     "author": "DenysYakubets",
     "homepage": "https://barcode-game.denysyakubets.tk/",
@@ -31,6 +31,7 @@
         "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-firebase": "^0.1.21",
         "cordova-plugin-nativestorage": "^2.2.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
@@ -45,7 +46,7 @@
         "zone.js": "0.8.12"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "1.3.8",
+        "@ionic/app-scripts": "^1.3.12",
         "@ionic/cli-plugin-cordova": "1.4.0",
         "@ionic/cli-plugin-ionic-angular": "1.3.1",
         "typescript": "2.3.4"
@@ -60,7 +61,8 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-nativestorage": {},
-            "cordova-plugin-x-toast": {}
+            "cordova-plugin-x-toast": {},
+            "cordova-plugin-firebase": {}
         },
         "platforms": [
             "android"
